z-index issue Firefox

--- a/css/style9.css
+++ b/css/style9.css
@@ -71,6 +71,7 @@
 	visibility: visible;
 	-webkit-transition: none;
 	transition: none;
+	z-index: 10000;
 }
 .overlay.close {
 	visibility: hidden;
